0.1 - 0.2

* Converted to use unix-privesc-check style file layout
* Cleaned up check descriptions and messages
* Added lib/checks/binary_SSL_cipher and lib/checks/binary_SSL_protocol
* Added tools/dump_process
* tools/generate_docs.sh now dumps binary search strings
* Cleaned up based on shellcheck output
* Added note to doc/COPYING referencing Twitter exchange with i0n1c about
  dumpdecrypted
* Added lib/checks/enabled/post-install-quick and lib/checks/enabled/post-test-quick
  which won't calculate the hashes for all files
* Added support for iOS 8 style installs (use the --directorypath flag to inform
  iaa.sh about where the application data lives (if not with the main app
  itself))
* Renamed classdump_matches_ios_api to classdump_matches_api
* Changed binary_matches_api to use disassembly cache
* Added lib/checks/binary_afnetworking and updated lib/checks/framework to check 
  for it

0.0 - 0.1

* Initial PoC